...
      }}
    >
      <Tabs.Screen
        name="accounts"
        options={{
          title: t('tabs.accounts'),
          tabBarButtonTestID: 'tab-accounts',
          tabBarIcon: ({ color }) => (
            <TabIcon color={color} name="bank-outline" />
          ),
        }}
      />
      <Tabs.Screen
...
